# shadowbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  tryme.txt
.github/workflows/: gitlab-mirror.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: import_kaggle_datasets.py  setup_dev_env.sh  test_runner.py
src/shadowbox/: __init__.py
src/shadowbox/api/: __init__.py
src/shadowbox/core/: __init__.py  core_filemanager.py  exceptions.py  file_manager.py  hashing.py  metadata.py  models.py  storage.py  versioning.py
src/shadowbox/database/: __init__.py  connection.py  indexing.py  models.py  pool.py  query_optimizer.py  schema.py  search.py
src/shadowbox/frontend/cli/: app.py  clipboard.py  context.py  logging_config.py
src/shadowbox/network/: __init__.py  adapter.py  client.py  server.py
src/shadowbox/network/shared_dir/: first_text  second_text  test_text
src/shadowbox/network/shared_dir/nested/double_nested/: test
src/shadowbox/network/shared_dir/nested_dir/: test_file2
src/shadowbox/security/: __init__.py  crypto.py  encryption.py  kdf.py  keystore.py  session.py
tests/: __init__.py
tests/integration/: __init__.py  test_database.py  test_file_manager_encryption.py  test_kaggle_imports.py
tests/unit/: __init__.py  test_core_metadata.py  test_core_models.py  test_database.py  test_database_indexing.py  test_database_pool.py  test_database_query_optimizer.py  test_database_search.py  test_file_manager.py  test_file_manager_encryption.py  test_frontend_cli_app.py  test_frontend_cli_context.py  test_hashing.py  test_network.py  test_network_adapter.py  test_network_server.py  test_security_crypto.py  test_security_crypto_coverage.py  test_security_encryption.py  test_security_kdf.py  test_security_keystore.py  test_security_session.py  test_storage.py
