[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "src"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src/shadowbox",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

markers = [
  "integration: marks tests as integration tests (involving I/O or DB)",
]
filterwarnings = [
  "ignore:ResourceWarning",
]

[tool.coverage.run]
source = ["src/shadowbox"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowbox"
version = "0.1.0"
description = "ShadowBox LAN server prototype"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "click",
    "rich",
    "zeroconf",
    "textual>=0.58.0",
    "pyperclip>=1.9.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-benchmark",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "pylint",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["shadowbox*"]
